--- a/DroneActor/DroneActor.csproj
+++ b/DroneActor/DroneActor.csproj
@@ -89,6 +89,10 @@
       <Project>{7B77119A-AA55-4913-93C3-53C29B83E91F}</Project>
       <Name>DroneActor.Interfaces</Name>
     </ProjectReference>
+    <ProjectReference Include="..\DroneQueryService.Interfaces\DroneQueryService.Interfaces.csproj">
+      <Project>{2C8ACF04-E315-4561-904A-9FF9770034CF}</Project>
+      <Name>DroneQueryService.Interfaces</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Microsoft.ServiceFabric.Actors.2.0.135\build\Microsoft.ServiceFabric.Actors.targets" Condition="Exists('..\packages\Microsoft.ServiceFabric.Actors.2.0.135\build\Microsoft.ServiceFabric.Actors.targets')" />
