Added GET, POST, PUT, DELETE HTTP Method support

--- a/src/Drones.Shared/Drones.Shared.csproj
+++ b/src/Drones.Shared/Drones.Shared.csproj
@@ -68,9 +68,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Utility\DroneCalculations.cs" />
-    <Compile Include="DroneModel.cs" />
+    <Compile Include="Drone.cs" />
     <Compile Include="Factories\DroneServiceFactory.cs" />
-    <Compile Include="Interfaces\IDroneManagementService.cs" />
+    <Compile Include="Interfaces\IDroneManager.cs" />
     <Compile Include="Interfaces\IDroneRegistry.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Interfaces\IDroneActor.cs" />
