--- a/src/Drones.Shared/Drones.Shared.csproj
+++ b/src/Drones.Shared/Drones.Shared.csproj
@@ -67,13 +67,14 @@
     <Reference Include="System.Runtime.Serialization" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Model\DronePayload.cs" />
     <Compile Include="Utility\DroneCalculations.cs" />
-    <Compile Include="Drone.cs" />
+    <Compile Include="Model\Drone.cs" />
     <Compile Include="Factories\DroneServiceFactory.cs" />
-    <Compile Include="Interfaces\IDroneManager.cs" />
-    <Compile Include="Interfaces\IDroneRegistry.cs" />
+    <Compile Include="Service.Interfaces\IDroneManager.cs" />
+    <Compile Include="Service.Interfaces\IDroneRegistry.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Interfaces\IDroneActor.cs" />
+    <Compile Include="Service.Interfaces\IDroneActor.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
