--- a/src/DroneQueryEngine/DroneQueryEngine.csproj
+++ b/src/DroneQueryEngine/DroneQueryEngine.csproj
@@ -81,7 +81,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\src\Drones.Shared\Drones.Shared.csproj">
+    <ProjectReference Include="..\Drones.Shared\Drones.Shared.csproj">
       <Project>{7b77119a-aa55-4913-93c3-53c29b83e91f}</Project>
       <Name>Drones.Shared</Name>
     </ProjectReference>
