--- a/DroneWebApp/project.json
+++ b/DroneWebApp/project.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "Microsoft.AspNet.WebApi.Cors": "5.2.3",
     "Microsoft.AspNetCore.Diagnostics": "1.0.0",
     "Microsoft.AspNetCore.Mvc": "1.0.0",
     "Microsoft.AspNetCore.Razor.Tools": {
